Style: Resolve double scroll issue

--- a/KumadioClient/src/app/home/home.component.scss
+++ b/KumadioClient/src/app/home/home.component.scss
@@ -3,6 +3,8 @@
   margin-left: 0;
   margin-top: 50px;
   margin-bottom: 50px;
+  height: 100vh;
+  overflow-y: auto;
 
   /* On desktop, shift 200px for the sidenav */
   @media (min-width: 768px) {
